pages/index.module.scss
@import '../styles/common';

.hero {
  display: flex;
  flex-direction: column;
  margin: auto;
  min-height: rem(400);

  &__content {
    flex: 1;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    a {
      @extend .print_font;
      @include font-size(36);
      font-weight: 600;
      margin-bottom: rem(20);
    }

    &:nth-of-type(2) {
      padding-left: 0;
      padding-top: rem(50);
    }
  }

  &__column {
    flex: none;
  }

  @include media($screen-lg) {
    flex-direction: row;
    min-height: rem(500);

    &__content:nth-of-type(2) {
      padding-left: rem(100);
      padding-top: 0;
    }
  }

  @include media($screen-xl) {
    min-height: rem(600);
  }
}

.content {
  margin: rem(20);
  max-width: $max-content-width;
  min-width: rem(320);

  @include media($screen-md) {
    margin: rem(30);
  }

  @include media($screen-lg) {
    margin: rem(50) auto;
  }
}

.date {
  @extend .print_font;
  @include font-size(32);

  color: $white;
  margin: rem(20);

  @include media($screen-sm) {
    @include font-size(40);
  }

  @include media($screen-md) {
    @include font-size(44);
  }
}

.faq {
  text-align: left;

  &__question {
    @extend .print_font;
    @include font-size(24);
  }
}

